# medilingua-core

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: medilingua-pipeline.yml
backend/: Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/api/: routes.py
backend/src/core/: ai.py  engine.py  glossary.py  parser.py  schemas.py
backend/tests/: conftest.py  test_core.py  test_routes.py
docs/: sample.xlf
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/components/: AnalysisChat.tsx  FileUpload.tsx  WidthVisualizer.tsx
frontend/src/components/__tests__/: WidthVisualizer.test.tsx
frontend/src/services/: api.ts
